# rust-web-ssh

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
data/: .encryption_key  .encryption_salt  audit_logs.json  ssh_configs.json  users.json
src/: api.rs  main.rs
src/api/: ssh_websocket.rs
src/api/ssh_websocket/: session.rs
static/: app.js  i18n.js  index.html  style.css
