[package]
name = "webssh"
version = "0.1.0"
edition = "2021"
authors = ["steven"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
tokio-stream = "0.1"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
ssh2 = "0.9"
async-trait = "0.1"
anyhow = "1.0"
serde_json = "1.0"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }

